feat: added get-all-users api (authorized access only)
